# graded-memory

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  README.md  keep-warm.sh  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: analytics.py  calibration.py  collector.py  control_map.py  db.py  judge.py  live.py  llm.py  main.py  mcp_server.py  models.py  offline_judge.py  pipeline.py  remediation.py  reuse.py  risk_scan.py  webhooks.py
backend/scripts/: prerun.py  seed_offline.py  smoke.py
backend/seed/org_prompts/agents/: data_qa_agent.md  release_notes_agent.md  support_triage_agent.md
backend/seed/org_prompts/data/: api_pull.md  chart_caption.md  db_connection.md  summarize_trends.md  weekly_report.md
backend/seed/org_prompts/finance/: expense_summary.md
backend/seed/org_prompts/fraud/: case_summary.md  deploy_scorer.md  explain_alert.md  optimize_scoring_code.md
backend/seed/org_prompts/hr/: interview_notes.md
backend/seed/org_prompts/legal/: review_contract.md
backend/seed/org_prompts/marketing/: blog_outline.md  promo_blast.md  subject_lines.md
backend/seed/org_prompts/onboarding/: day_one_checklist.md  explain_glossary.md  reset_env.md  welcome_old.md
backend/seed/org_prompts/support/: draft_apology.md  escalation_note.md  faq_answer.md  lookup_customer.md  refund_macro.md  summarize_ticket.md  (+2 more)
backend/tests/: test_analytics.py  test_calibration.py  test_control_map.py  test_db.py  test_judge.py  test_live.py  test_llm.py  test_mcp_server.py  test_offline_judge.py  test_reuse.py  test_risk_scan.py  test_webhooks.py
(+23 files in other folders)
