[project]
name = "graded-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional: run the Model Context Protocol server (app/mcp_server.py) so AI agents can
# call grade/find-prior-art/capability tools. Not needed by the web app or the deploy.
mcp = ["mcp>=1.2"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
